# basic-pinn

./: LICENSE  README.md  burgers_equation_1d.py  logistic_equation.py  logistic_equation_1d.py  logistic_equation_1d_func.py  pinn.py  pyproject.toml  requirements.txt  wave_equation_1d.py
basic_pinn/: logistic_equation.py  logistic_equation_1d.py  pinn.py  plotting.py  training.py  wave_equation_1d.py
tests/: test_pinn.py
